--- a/css/dance.css
+++ b/css/dance.css
@@ -7,7 +7,7 @@ body{
     font-family: "Poppins", sans-serif;
 color:#716c53;
 background-color: #fffffe; }
-    .top-header-section img{width: ;}
+    .top-header-section img{width:0 ;}
     .top-header-section{background-image: url(/image/Untitled-2.jpg);}
     .top-header-section .main-column{
         display: grid;
@@ -22,14 +22,13 @@ background-color: #fffffe; }
     }
     .top-header-section .main-column li:last-child{padding-right: 0px;}
     .top-header-section .main-column a{text-decoration: none;color: #716c53;}
-    .top-body-section img{width: ;}
+    .top-body-section img{width: 0;}
     .top-body-section{background-image: url("/image/Untitled-3.jpg");
     background-size:cover ;
     background-repeat: no-repeat;
     width: 100%;
     height: 120vh;
-    font-family: 
-    ;padding-bottom: 799px;}
+    padding-bottom: 799px;}
     .top-body-section .main-column{display: grid;
     grid-template-columns: 1fr 1fr;}
     .top-body-section .main-column .right-box{padding-top: 200px;color: #716c53;
@@ -219,7 +218,7 @@ background: #716c53;}
     background-size: cover;
     background-repeat: no-repeat;
 }
-.ben img{width: ;}
+.ben img{width: 0;}
 .ben{background-image: url(/image/Untitled-8.jpg);
 margin-top: 130px;
 background-size: cover;
